--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,33 @@
     <meta charset="utf-8" />
     <link rel="icon" href="./icon.gif" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#fff" />
     <meta name=keywords
           content="Приглашение">
     <title>Приглашение на свадьбу</title>
+<!-- MS Tile - for Microsoft apps-->
+<meta name="msapplication-TileImage" content="https://raw.githubusercontent.com/Timelas/ivan-i-ulyana/main/src/images/sie.jpg">    
+
+<!-- fb & Whatsapp -->
+
+<!-- Site Name, Title, and Description to be displayed -->
+<meta property="og:title" content="Приглашение на свадьбу">
+<meta property="og:description" content="Иван и Ульяна. 16 сентября 2023 года">
+
+<!-- Image to display -->
+<!-- Replace   «example.com/image01.jpg» with your own -->
+<meta property="og:image" content="https://raw.githubusercontent.com/Timelas/ivan-i-ulyana/main/src/images/sie.jpg">
+
+<!-- No need to change anything here -->
+<meta property="og:type" content="website" />
+<meta property="og:image:type" content="image/jpeg">
+
+<!-- Size of image. Any size up to 300. Anything above 300px will not work in WhatsApp -->
+<meta property="og:image:width" content="300">
+<meta property="og:image:height" content="200">
+
+<!-- Website to visit when clicked in fb or WhatsApp-->
+<meta property="og:url" content="https://stanislav-i-ekaterina.vercel.app/">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
     <script type="text/javascript">
       $(document).ready(function(){
