--- a/public/index.html
+++ b/public/index.html
@@ -9,17 +9,17 @@
           content="Приглашение">
     <title>Приглашение на свадьбу</title>
 <!-- MS Tile - for Microsoft apps-->
-<meta name="msapplication-TileImage" content="https://raw.githubusercontent.com/Timelas/ivan-i-ulyana/main/src/images/sie.jpg">    
+<meta name="msapplication-TileImage" content="https://raw.githubusercontent.com/Timelas/Stanislav-i-Ekaterina/main/src/images/sie.jpg>    
 
 <!-- fb & Whatsapp -->
 
 <!-- Site Name, Title, and Description to be displayed -->
 <meta property="og:title" content="Приглашение на свадьбу">
-<meta property="og:description" content="Иван и Ульяна. 16 сентября 2023 года">
+<meta property="og:description" content="Станислав и Екатерина. 12 августа 2023 года">
 
 <!-- Image to display -->
 <!-- Replace   «example.com/image01.jpg» with your own -->
-<meta property="og:image" content="https://raw.githubusercontent.com/Timelas/ivan-i-ulyana/main/src/images/sie.jpg">
+<meta property="og:image" content="https://raw.githubusercontent.com/Timelas/Stanislav-i-Ekaterina/main/src/images/sie.jpg">
 
 <!-- No need to change anything here -->
 <meta property="og:type" content="website" />
