--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
           content="Приглашение">
     <title>Приглашение на свадьбу</title>
 <!-- MS Tile - for Microsoft apps-->
-<meta name="msapplication-TileImage" content="https://raw.githubusercontent.com/Timelas/Stanislav-i-Ekaterina/main/src/images/sie.jpg>    
+<meta name="msapplication-TileImage" content="https://raw.githubusercontent.com/Timelas/Stanislav-i-Ekaterina/main/src/images/sie.jpg">    
 
 <!-- fb & Whatsapp -->
 
